# reqstool-python-hatch-plugin

./: CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: build.yml  check_release.yml  lint.yml  publish_pypi_prod.yml  publish_pypi_test.yml
docs/: antora-playbook.yml
docs/modules/ROOT/pages/: configuration.adoc  description.adoc  index.adoc  license.adoc  usage.adoc
src/reqstool_python_hatch_plugin/build_hooks/: reqstool.py
tests/e2e/reqstool_python_hatch_plugin/: test_build_e2e.py
tests/fixtures/test_project/: README.md  pyproject.toml
tests/fixtures/test_project/docs/reqstool/: requirements.yml
