[build-system]
requires = ["hatchling==1.29.0", "hatch-vcs==0.5.0", "build==1.4.0", "twine==6.2.0"]
build-backend = "hatchling.build"

[project]
name = "reqstool-python-hatch-plugin"
dynamic = ["version"]
authors = [{ name = "reqstool" }]
description = "Hatch plugin to process reqstool-python-decorators when building with Hatch"
readme = "README.md"
requires-python = ">=3.13"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
]
dependencies = [
    "reqstool-python-decorators==0.0.9",
    "ruamel.yaml==0.19.1",
    "hatchling==1.29.0",
]

[project.urls]
Homepage = "https://reqstool.github.io"
Source = "https://github.com/reqstool/reqstool-python-hatch-plugin.git"
Documentation = "https://github.com/reqstool/reqstool-python-hatch-plugin.git"

[project.entry-points.hatch]
reqstool = "reqstool_python_hatch_plugin.hooks"

[tool.hatch.version]
source = "vcs"

[tool.hatch.version.raw-options]
local_scheme = "no-local-version"

[tool.hatch.envs.dev]
dependencies = [
    "black==25.1.0",
    "flake8-pyproject==1.2.3",
    "flake8==7.3.0",
    "pytest-cov==6.2.1",
    "pytest-sugar==1.0.0",
    "pytest==8.4.1",
]


[tool.pytest.ini_options]
addopts = [
    "-rsxX",
    "-s",
    "--import-mode=importlib",
    "--log-cli-level=DEBUG",
]
pythonpath = [".", "src", "tests"]
testpaths = ["tests"]
norecursedirs = ["tests/fixtures"]
markers = [
    "integration: tests that require external resources",
    "e2e: end-to-end tests that run the full pipeline locally",
]

[tool.black]
line-length = 120
target-version = ['py313']

[tool.flake8]
ignore = ["W503"]
max-line-length = 120

max-complexity = 10
